--- a/web/views/index/hedit.html
+++ b/web/views/index/hedit.html
@@ -1,54 +1,78 @@
+
 <div class="row tile">
-    <div class="col-md-6 col-md-auto">
-        <div>
-            <h3 class="tile-title">修改</h3>
-            <div class="tile-body">
-                <form>
+    <div class="col-md-12 col-md-auto">
+        <div class="ibox float-e-margins">
+            <h3 class="ibox-title">add host</h3>
+            <div class="ibox-content">
+                <form class="form-horizontal">
                     <input type="hidden" name="id" value="{{.h.Id}}">
                     <div class="form-group">
-                        <label class="control-label">域名</label>
-                        <input class="form-control" value="{{.h.Host}}" name="host" placeholder="域名">
+                        <label class="col-sm-2 control-label">remark</label>
+                        <div class="col-sm-10">
+                            <input value="{{.h.Remark}}" class="form-control" type="text" name="remark" placeholder="remark">
+                        </div>
                     </div>
                     <div class="form-group">
-                        <label class="control-label">URL路由(可忽略)</label>
-                        <input class="form-control" value="{{.h.Location}}" type="text" name="location"
-                               placeholder="URL路由">
+                        <label class="col-sm-2 control-label">host</label>
+                        <div class="col-sm-10">
+                            <input value="{{.h.Host}}" class="form-control" type="text" name="host" placeholder="such as a.proxy.com">
+                        </div>
                     </div>
                     <div class="form-group">
-                        <label class="control-label">备注</label>
-                        <input class="form-control" value="{{.h.Remark}}" type="text" name="remark" placeholder="备注">
+                        <label class="col-sm-2 control-label">url router</label>
+                        <div class="col-sm-10">
+                            <input value="{{.h.Location}}" class="form-control" type="text" name="location"
+                                   placeholder="empty means to be unrestricted">
+                        </div>
                     </div>
                     <div class="form-group">
-                        <label class="control-label">客户端id</label>
-                        <input class="form-control" value="{{.h.Client.Id}}" type="text" name="client_id"
-                               placeholder="客户端id">
+                        <label class="col-sm-2 control-label">client id</label>
+                        <div class="col-sm-10">
+                            <input value="{{.h.Client.Id}}" class="form-control" type="text" name="client_id"
+                                   placeholder="client id">
+                        </div>
                     </div>
                     <div class="form-group">
-                        <label class="control-label">内网目标</label>
+                        <label class="col-sm-2 control-label">target of Intranet(ip:port)</label>
+                        <div class="col-sm-10">
                         <textarea class="form-control" rows="4" type="text" name="target"
-                                  placeholder="内网隧道目标，例如10.1.50.203:22，换行分隔">{{.h.Target}}</textarea>
+                                  placeholder="such as
+10.1.50.203:80
+10.1.50.202:80">{{.h.Target}}</textarea>
+                            <span class="help-block m-b-none">Line break if load balancing</span>
+
+                        </div>
                     </div>
                     <div class="form-group" id="header">
-                        <label class="control-label">header头修改(冒号分隔，多个请换行填写)</label>
+                        <label class="col-sm-2 control-label">header modify</label>
+                        <div class="col-sm-10">
                         <textarea class="form-control" rows="4" type="text" name="header"
                                   placeholder="Cache-Control: no-cache">{{.h.HeaderChange}}</textarea>
+                            <span class="help-block m-b-none"> Colon separated, multiple lines please fill in</span>
+                        </div>
+
                     </div>
                     <div class="form-group" id="hostchange">
-                        <label class="control-label">host修改</label>
-                        <input class="form-control" value="{{.h.HostChange}}" type="text" name="hostchange"
-                               placeholder="host修改">
+                        <label class="col-sm-2 control-label">host modify</label>
+                        <div class="col-sm-10">
+                            <input value="{{.h.HostChange}}" class="form-control" value="" type="text" name="hostchange"
+                                   placeholder="host modify">
+                        </div>
+                    </div>
+                    <div class="hr-line-dashed"></div>
+                    <div class="form-group">
+                        <div class="col-sm-4 col-sm-offset-2">
+                            &nbsp;<button class="btn btn-success" href="#" id="add"><i
+                                class="fa fa-fw fa-lg fa-eye"></i>save
+                        </button>
+                        </div>
                     </div>
                 </form>
-            </div>
-            <div class="tile-footer">
-                &nbsp;&nbsp;<button class="btn btn-success" href="#" id="add"><i
-                    class="fa fa-fw fa-lg fa-eye"></i>保存
-            </button>
             </div>
         </div>
     </div>
 </div>
-</main>
+
 <script>
     $(function () {
         $("#add").on("click", function () {
