--- a/web/views/public/layout.html
+++ b/web/views/public/layout.html
@@ -73,6 +73,9 @@
                 <li class="{{if eq "p2p" .menu}}active{{end}}">
                     <a href="/index/p2p"><i class="fa fa-dashcube"></i> <span class="nav-label">p2p</span></a>
                 </li>
+                <li class="{{if eq "file" .menu}}active{{end}}">
+                    <a href="/index/file"><i class="fa fa-laptop"></i> <span class="nav-label">file</span></a>
+                </li>
             </ul>
 
         </div>
