--- a/web/views/index/add.html
+++ b/web/views/index/add.html
@@ -12,9 +12,10 @@
                                 <option {{if eq "udp" .type}}selected{{end}} value="udp">udp</option>
                                 <option {{if eq "socks5" .type}}selected{{end}} value="socks5">socks5
                                 </option>
-                                <option {{if eq "httpProxy" .type}}selected{{end}} value="httpProxy">http
-                                <option {{if eq "secret" .type}}selected{{end}} value="secret">secret
-                                <option {{if eq "p2p" .type}}selected{{end}} value="p2p">p2p
+                                <option {{if eq "httpProxy" .type}}selected{{end}} value="httpProxy">http</option>
+                                <option {{if eq "secret" .type}}selected{{end}} value="secret">secret</option>
+                                <option {{if eq "p2p" .type}}selected{{end}} value="p2p">p2p</option>
+                            {{/*<option {{if eq "file" .type}}selected{{end}} value="file">file*/}}
                             </select>
                         </div>
                     </div>
@@ -33,6 +34,7 @@
                             <input class="form-control" type="text" name="port" placeholder="such as 8024">
                         </div>
                     </div>
+
                     <div class="form-group" id="target">
                         <label class="col-sm-2 control-label">target of Intranet(ip:port)</label>
                         <div class="col-sm-10">
@@ -47,6 +49,22 @@
                         <div class="col-sm-10">
                             <input value="{{.client_id}}" class="form-control" type="text" name="client_id"
                                    placeholder="id of client">
+                        </div>
+                    </div>
+
+                    <div class="form-group" id="local_path">
+                        <label class="col-sm-2 control-label">local path</label>
+                        <div class="col-sm-10">
+                            <input class="form-control" type="text" name="local_path"
+                                   placeholder="such as /tmp">
+                        </div>
+                    </div>
+
+                    <div class="form-group" id="strip_pre">
+                        <label class="col-sm-2 control-label">strip pre</label>
+                        <div class="col-sm-10">
+                            <input class="form-control" type="text" name="strip_pre"
+                                   placeholder="such as static">
                         </div>
                     </div>
 
@@ -75,13 +93,14 @@
 </div>
 <script>
     var arr = []
-    arr["all"] = ["type", "port", "compress", "u", "p", "target", "password"]
+    arr["all"] = ["type", "port", "compress", "u", "p", "target", "password", "strip_pre", "local_path"]
     arr["tcp"] = ["type", "port", "target", "compress", "u", "p", "tcp隧道模式，提供一条tcp隧道，适用于ssh、远程桌面等，添加后会自动生成一个客户端验证key<br>在内网机器执行<span style='color: red'>./easyProxy -vkey=生成的key -server=公网服务器ip:下面设定的端口</span><br>建立成功后，访问公网服务器的设定端口，则相当于访问内网目标地址的目标端口"]
     arr["udp"] = ["type", "port", "target", "compress", "udp隧道模式，提供一条udp隧道，适用于dns、内网dns访问等，添加后会自动生成一个客户端验证key<br>在内网机器执行<span style='color: red'>./easyProxy -vkey=生成的key -server=公网服务器ip:下面设定的端口</span><br>建立成功后，访问公网服务器的设定端口，则相当于访问内网目标地址的udp目标端口"]
     arr["socks5"] = ["type", "port", "compress", "u", "p", "socks5代理模式，内网socks5代理，配合proxifer，可如同使用vpn一样访问内网设备或资源，添加后会自动生成一个客户端验证key<br>在内网机器执行<span style='color: red'>./easyProxy -vkey=生成的key -server=公网服务器ip:下面设定的端口</span><br>建立成功后，在外网环境下本机配置socks5代理，即访问内网设备或者资源 "]
     arr["httpProxy"] = ["type", "port", "compress", "u", "p", " http代理模式，内网http代理，可访问内网网站，添加后会自动生成一个客户端验证key<br>在内网机器执行<span style='color: red'>./easyProxy -vkey=生成的key -server=公网服务器ip:下面设定的端口</span><br>建立成功后，在外网环境下本机配置http代理，即访问内网站点"]
     arr["secret"] = ["type", "target", "compress", "password", "u", "p", " http代理模式，内网http代理，可访问内网网站，添加后会自动生成一个客户端验证key<br>在内网机器执行<span style='color: red'>./easyProxy -vkey=生成的key -server=公网服务器ip:下面设定的端口</span><br>建立成功后，在外网环境下本机配置http代理，即访问内网站点"]
     arr["p2p"] = ["type", "compress", "password", "u", "p", " http代理模式，内网http代理，可访问内网网站，添加后会自动生成一个客户端验证key<br>在内网机器执行<span style='color: red'>./easyProxy -vkey=生成的key -server=公网服务器ip:下面设定的端口</span><br>建立成功后，在外网环境下本机配置http代理，即访问内网站点"]
+    arr["file"] = ["type", "strip_pre", "local_path", "port", " http代理模式，内网http代理，可访问内网网站，添加后会自动生成一个客户端验证key<br>在内网机器执行<span style='color: red'>./easyProxy -vkey=生成的key -server=公网服务器ip:下面设定的端口</span><br>建立成功后，在外网环境下本机配置http代理，即访问内网站点"]
     arrClientHide = ["compress", "u", "p", "crypt", "mux"]
 
     function resetForm() {
