--- a/web/views/index/edit.html
+++ b/web/views/index/edit.html
@@ -13,9 +13,10 @@
                                 <option {{if eq "udp" .t.Mode}}selected{{end}} value="udp">udp</option>
                                 <option {{if eq "socks5" .t.Mode}}selected{{end}} value="socks5">socks5
                                 </option>
-                                <option {{if eq "httpProxy" .t.Mode}}selected{{end}} value="httpProxy">http
-                                <option {{if eq "secret" .t.Mode}}selected{{end}} value="secret">secret
-                                <option {{if eq "p2p" .t.Mode}}selected{{end}} value="p2p">p2p
+                                <option {{if eq "httpProxy" .t.Mode}}selected{{end}} value="httpProxy">http</option>
+                                <option {{if eq "secret" .t.Mode}}selected{{end}} value="secret">secret</option>
+                                <option {{if eq "p2p" .t.Mode}}selected{{end}} value="p2p">p2p</option>
+                                <option {{if eq "file" .t.Mode}}selected{{end}} value="file">file</option>
                             </select>
                         </div>
                     </div>
@@ -31,7 +32,8 @@
                     <div class="form-group" id="port">
                         <label class="col-sm-2 control-label">port of server</label>
                         <div class="col-sm-10">
-                            <input value="{{.t.Port}}" class="form-control" type="text" name="port" placeholder="such as 8024">
+                            <input value="{{.t.Port}}" class="form-control" type="text" name="port"
+                                   placeholder="such as 8024">
                         </div>
                     </div>
                     <div class="form-group" id="target">
@@ -46,8 +48,25 @@
                     <div class="form-group" id="client_id">
                         <label class="col-sm-2 control-label">id of client</label>
                         <div class="col-sm-10">
-                            <input value="{{.t.Client.Id}}" value="{{.client_id}}" class="form-control" type="text" name="client_id"
+                            <input value="{{.t.Client.Id}}" value="{{.client_id}}" class="form-control" type="text"
+                                   name="client_id"
                                    placeholder="id of client">
+                        </div>
+                    </div>
+
+                    <div class="form-group" id="local_path">
+                        <label class="col-sm-2 control-label">local path</label>
+                        <div class="col-sm-10">
+                            <input value="{{.t.LocalPath}}" class="form-control" type="text" name="local_path"
+                                   placeholder="such as /tmp">
+                        </div>
+                    </div>
+
+                    <div class="form-group" id="strip_pre">
+                        <label class="col-sm-2 control-label">strip pre</label>
+                        <div class="col-sm-10">
+                            <input value="{{.t.StripPre}}" class="form-control" type="text" name="strip_pre"
+                                   placeholder="such as static">
                         </div>
                     </div>
 
@@ -63,8 +82,8 @@
                     <div class="form-group">
                         <div class="col-sm-4 col-sm-offset-2">
                             <button class="btn btn-success" href="#" id="add"><i
-                                class="fa fa-fw fa-lg fa-eye"></i>save
-                        </button>
+                                    class="fa fa-fw fa-lg fa-eye"></i>save
+                            </button>
                         </div>
                     </div>
 
@@ -73,17 +92,16 @@
         </div>
     </div>
 </div>
-
-</main>
 <script>
     var arr = []
-    arr["all"] = ["type", "port", "compress", "u", "p", "target","password"]
+    arr["all"] = ["type", "port", "compress", "u", "p", "target", "password", "local_path", "strip_pre"]
     arr["tcp"] = ["type", "port", "target", "u", "p", "compress"]
     arr["udp"] = ["type", "port", "target", "compress"]
     arr["socks5"] = ["type", "port", "compress", "u", "p"]
     arr["httpProxy"] = ["type", "port", "compress", "u", "p"]
-    arr["secret"] = ["type", "target", "compress", "u", "p","password"]
-    arr["p2p"] = ["type", "compress", "u", "p","password"]
+    arr["secret"] = ["type", "target", "compress", "u", "p", "password"]
+    arr["p2p"] = ["type", "password"]
+    arr["file"] = ["type", "port", "local_path", "strip_pre"]
     arrClientHide = ["compress", "u", "p", "crypt", "mux"]
 
     function resetForm() {
