web display bug

--- a/web/views/public/layout.html
+++ b/web/views/public/layout.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 
@@ -23,6 +22,7 @@
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="/static/js/bootstrap-table.min.js"></script>
+    <script src="/static/js/inspinia.js"></script>
     <!-- Latest compiled and minified Locales -->
 
 
@@ -35,8 +35,8 @@
             <ul class="nav metismenu" id="side-menu">
                 <li class="nav-header">
                     <div class="dropdown profile-element"> <span>
-                            {{/*<img alt="image" class="img-circle" src="/static/img/profile_small.jpg"/>*/}}
-                             </span>
+                    {{/*<img alt="image" class="img-circle" src="/static/img/profile_small.jpg"/>*/}}
+                    </span>
                         <a href="#">
                             <span class="clear"> <span class="block m-t-xs"> <strong class="font-bold">admin</strong>
                              </span> <span class="text-muted text-xs block">system </span> </span>
@@ -89,7 +89,8 @@
                 </div>
                 <ul class="nav navbar-top-links navbar-right">
                     <li>
-                        <span class="m-r-sm text-muted welcome-message">Welcome to use <a href="https://github.com/cnlh/nps">NPS</a></span>
+                        <span class="m-r-sm text-muted welcome-message">Welcome to use <a
+                                href="https://github.com/cnlh/nps">NPS</a></span>
                     </li>
 
                     <li>
@@ -106,7 +107,7 @@
     {{.LayoutContent}}
         <div class="footer">
             <div class="pull-right">
-                 read more <strong><a href="https://github.com/cnlh/nps">go</a></strong>
+                read more <strong><a href="https://github.com/cnlh/nps">go</a></strong>
             </div>
             <div>
                 <strong>Copyright</strong> nps &copy; 2018-2019
@@ -118,3 +119,5 @@
 
 </body>
 </html>
+
+
