--- a/web/views/index/hlist.html
+++ b/web/views/index/hlist.html
@@ -98,6 +98,12 @@
                 sortable: true,//启用排序
             },
             {
+                field: 'Scheme',//域值
+                title: 'scheme',//标题
+                visible: true,//false表示不显示
+                sortable: true,//启用排序
+            },
+            {
                 field: 'Target',//域值
                 title: 'target',//标题
                 visible: true,//false表示不显示
