--- a/web/views/index/hadd.html
+++ b/web/views/index/hadd.html
@@ -16,6 +16,16 @@
                             <input class="form-control" type="text" name="host" placeholder="such as a.proxy.com">
                         </div>
                     </div>
+                    <div class="form-group" id="scheme">
+                        <label class="control-label col-sm-2">scheme</label>
+                        <div class="col-sm-10">
+                            <select class="form-control" name="scheme">
+                                <option value="all">all</option>
+                                <option value="http">http</option>
+                                <option value="https">https</option>
+                            </select>
+                        </div>
+                    </div>
                     <div class="form-group">
                         <label class="col-sm-2 control-label">url router</label>
                         <div class="col-sm-10">
