--- a/web/views/public/layout.html
+++ b/web/views/public/layout.html
@@ -120,4 +120,15 @@
 </body>
 </html>
 
+<script>
+    // googleTranslateElementInit()
+    //
+    // function googleTranslateElementInit() {
+    //     new google.translate.TranslateElement({
+    //         layout: google.translate.TranslateElement.InlineLayout.HORIZONTAL
+    //     }, 'wrapper');
+    // }
+</script>
+{{/*<script src="http://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>*/}}
+
 
