--- a/web/views/index/edit.html
+++ b/web/views/index/edit.html
@@ -39,10 +39,11 @@
                     <div class="form-group" id="target">
                         <label class="col-sm-2 control-label">target of Intranet(ip:port)</label>
                         <div class="col-sm-10">
-                            <input value="{{.t.Target}}" class="form-control" type="text" name="target"
-                                   placeholder="such as 10.1.50.203:22 ">
-                            <span class="help-block m-b-none">can only fill in ports if it is local machine proxy</span>
-                        </div>
+                            <textarea class="form-control" name="target" rows="4" placeholder="10.1.50.203:22
+10.1.50.202:22">{{.t.Target}}</textarea>
+                            <span class="help-block m-b-none">can only fill in ports if it is local machine proxy, only tcp supports load balancing
+
+</span>                        </div>
                     </div>
 
                     <div class="form-group" id="client_id">
